@@ -6,7 +6,6 @@ ext {
 }
 
 group = 'org.bladecoder.engineeditor'
-version = engineVersion
 
 mainClassName = 'org.bladecoder.engineeditor.Main'
 
