@@ -1,4 +1,4 @@
-version=0.2.0-SNAPSHOT
+version=0.2.0
 libgdxVersion=1.3.1
 libgdxNightlyVersion=1.3.2-SNAPSHOT
 roboVMVersion=0.0.14
