@@ -1,10 +1,11 @@
 allprojects {
     apply plugin: "eclipse"
     apply plugin: "idea"
+    
+    version = '0.2.0'
 
     ext {
         gdxVersion = '1.3.1'
-		engineVersion = '0.2.0-SNAPSHOT'
     }
 
     repositories {
